--- a/WeatherAppDemo/App.config
+++ b/WeatherAppDemo/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
+    <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<appSettings>
+		<add key="WeatherAPIBaseAddress" value="https://www.jma.go.jp/bosai/forecast/data/overview_forecast/"/>
+	</appSettings>
 </configuration>
